test/samples/valid/interp/abort_catch2.maruir
fun fail(x: uint8): (uint8, uint8) {
    entry:
        abort;
}

fun middle(x: uint8): uint8
locals res1: uint8, res2: uint8;
{
    entry:
        res1, res2 := call fail(x);
        return res1;
}

fun main(): uint8
locals res: uint8, failed: bool;
{
    entry:
        res := uint8(1);
        res, failed := trans_call middle(uint8(1));
        branch failed fail_bb succ_bb;

    fail_bb:
        return uint8(42);
    
    succ_bb:
        return res;
}