test/samples/invalid/interp/mod_zero.maruir
fun main(): u8
locals a: u8, b: u8;
{
    entry:
        a := 5_u8 % 0_u8;

        return a;
}
